--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1"
